fix layout bug for folderArea

--- a/xpi/chrome/content/style/index.css
+++ b/xpi/chrome/content/style/index.css
@@ -242,10 +242,13 @@ a {
 	position: absolute;
 	width: 100%;
 	height: 0;
-	overflow: hidden;
 
 	background-color: rgba(0,0,0,0.75);
 	border-top: 2px solid rgba(255,255,255,0.75);
 	border-bottom: 2px solid rgba(255,255,255,0.75);
+}
+
+#folder.resizing{
+	overflow: hidden;
 }
 
